--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "sharp": "^0.34.5",
         "socket.io": "^4.6.1",
         "ua-parser-js": "^1.0.41",
+        "uuid": "^13.0.0",
         "winston": "^3.11.0"
     },
     "devDependencies": {
